--- a/gravitee-apim-gateway/gravitee-apim-gateway-tests-sdk/pom.xml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-tests-sdk/pom.xml
@@ -204,6 +204,12 @@
         </dependency>
 
         <dependency>
+            <groupId>io.gravitee.apim.plugin.reactor</groupId>
+            <artifactId>gravitee-apim-plugin-reactor-v4</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.gravitee.apim.definition</groupId>
             <artifactId>gravitee-apim-definition-jackson</artifactId>
             <version>${project.version}</version>
