test: dedicated integration test module

--- a/gravitee-apim-gateway/gravitee-apim-gateway-coverage/pom.xml
+++ b/gravitee-apim-gateway/gravitee-apim-gateway-coverage/pom.xml
@@ -211,6 +211,12 @@
             <artifactId>gravitee-apim-gateway-tests-integration</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.gravitee.apim.integration.tests</groupId>
+            <artifactId>gravitee-apim-integration-tests</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
