--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -657,6 +657,40 @@ jobs:
                   paths:
                       - gravitee-apim-plugin/gravitee-apim-plugin-coverage/target/site/jacoco-aggregate/
 
+    integration-tests:
+      executor:
+        name: ubuntu
+        class: medium
+      steps:
+        - install-jdk-17-for-machine
+        - checkout
+        - attach_workspace:
+            at: .
+        - restore-maven-job-cache:
+            jobName: integration-tests
+        - restore_cache:
+            keys:
+              - gravitee-api-management-v8-build-apim-{{ .Environment.CIRCLE_WORKFLOW_WORKSPACE_ID }}
+        - run:
+            name: Run tests
+            command: |
+              mvn -U --fail-fast -s .gravitee.settings.xml test --no-transfer-progress -Dintegration-tests -Dskip.validation=true -T 2C
+        - run:
+            name: Save test results
+            command: |
+              mkdir -p ~/test-results/junit/
+              find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+            when: always
+        - notify-on-failure
+        - save-maven-job-cache:
+            jobName: integration-tests
+        - store_test_results:
+            path: ~/test-results
+        - persist_to_workspace:
+            root: .
+            paths:
+              - gravitee-apim-gateway/gravitee-apim-gateway-coverage/target/site/jacoco-aggregate/
+
     test-repository:
         executor:
             name: ubuntu
@@ -1852,6 +1886,10 @@ workflows:
                   context: cicd-orchestrator
                   requires:
                       - build
+            - integration-tests:
+                context: cicd-orchestrator
+                requires:
+                  - build
             - sonarcloud-analysis:
                   name: Sonar - gravitee-apim-plugin
                   working_directory: gravitee-apim-plugin
@@ -1859,6 +1897,7 @@ workflows:
                   component: gravitee-apim-plugin
                   requires:
                       - test-plugin
+                      - integration-tests
             - test-repository:
                   context: cicd-orchestrator
                   requires:
@@ -1880,6 +1919,7 @@ workflows:
                   requires:
                       - test
                       - test-plugin
+                      - integration-tests
                       - test-repository
             - publish-on-nexus:
                   context: cicd-orchestrator
@@ -1891,6 +1931,7 @@ workflows:
                   requires:
                       - test
                       - test-plugin
+                      - integration-tests
                       - test-repository
             - webui-lint-test:
                   name: Lint & test APIM Console
@@ -1947,6 +1988,7 @@ workflows:
                   requires:
                       - test
                       - test-plugin
+                      - integration-tests
                       - test-repository
                       - build-images
                       - Build APIM Console
