--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>21.0.0</version>
+        <version>21.1.0-archi-233-code-obf-SNAPSHOT</version>
     </parent>
 
     <groupId>io.gravitee.apim</groupId>
