--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <gravitee-resource-cache-provider-api.version>1.2.0</gravitee-resource-cache-provider-api.version>
         <gravitee-resource-oauth2-provider-api.version>1.3.0</gravitee-resource-oauth2-provider-api.version>
         <gravitee-service-discovery-api.version>1.1.1</gravitee-service-discovery-api.version>
+        <gravitee-json-validation.version>1.0.0</gravitee-json-validation.version>
         <!-- Other dependencies version -->
         <asm.version>9.2</asm.version>
         <batik-transcoder.version>1.15</batik-transcoder.version>
@@ -351,6 +352,12 @@
                 <groupId>io.gravitee.discovery</groupId>
                 <artifactId>gravitee-service-discovery-api</artifactId>
                 <version>${gravitee-service-discovery-api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.gravitee.json</groupId>
+                <artifactId>gravitee-json-validation</artifactId>
+                <version>${gravitee-json-validation.version}</version>
             </dependency>
 
             <!-- Other dependencies -->
