refactor: move JSON validation in dedicated module

--- a/gravitee-apim-rest-api/gravitee-apim-rest-api-service/pom.xml
+++ b/gravitee-apim-rest-api/gravitee-apim-rest-api-service/pom.xml
@@ -150,6 +150,11 @@
 			<artifactId>gravitee-kubernetes-mapper</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.gravitee.json</groupId>
+			<artifactId>gravitee-json-validation</artifactId>
+		</dependency>
+
 		<!-- Lucene -->
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
