ci: fix sonar job
The latest sonarsource/sonar-scanner-cli:4.8 image have its base image
changed to debian-like distribution.

We can't upgrade yet because of https://github.com/SonarSource/sonar-scanner-cli-docker/issues/175
So I downgrade to 4.7 version util 4.8 is fixed

https://github.com/SonarSource/sonar-scanner-cli-docker/commit/a195c3c5c041dfb433381b444b0dc42eb27a0ab7
(cherry picked from commit e50bac056d9b4fe9f68bb7934a6718eba4f60b18)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -404,7 +404,7 @@ jobs:
                 default: "gravitee-apim-rest-api"
                 type: string
         docker:
-            - image: sonarsource/sonar-scanner-cli
+            - image: sonarsource/sonar-scanner-cli:4.7
         resource_class: large
         steps:
             - run:
